--- a/Views/Home/Level3.cshtml
+++ b/Views/Home/Level3.cshtml
@@ -13,3 +13,20 @@
         </ol>
     </div>
 </div>
+
+<div class="card">
+    <div class="card-body">
+        <h3>All teams, past and present that Samuel Evans has played with</h3>
+        <table class="table table-striped">
+            <tr>
+                <th>Team</th>
+            </tr>
+            @foreach(var p in ViewBag.AllSamuelEvansTeamsEver)
+            {
+                <tr>
+                    <td>[OOF THIS IS A TOUGHI]</td>
+                </tr>
+            }
+        </table>
+    </div>
+</div>
